# hh-companies-parser

./: README.md  area.py  main.py  pyproject.toml  utils.py
src/: area.py  db_manager.py  utils.py
